--- a/pages/demo4/demo4.wxml
+++ b/pages/demo4/demo4.wxml
@@ -1,2 +1,2 @@
-<!--pages/demo4/demo4.wxml-->
-<text>pages/demo4/demo4.wxml</text>
+<navigator url="/pages/demo3/demo3">跳转到demo3</navigator>
+<view style="width:200rpx;height:200rpx;background:pink;">{{title}}</view>
